fix(style/pikabu): bugfix overflow-y

--- a/hosts/pikabu.ru/style.css
+++ b/hosts/pikabu.ru/style.css
@@ -12,6 +12,7 @@
 }
 
 .page {
+    overflow: hidden;
     color: #454648;
 
     &__footer {
